<resources>
    <string name="app_name">KweallApp</string>
    <string name="button_continue">Далее</string>
    <string name="text_successful_registration">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="text_congratulations">Поздравляем</string>
    <string name="text_enjoy_using_it">Пользуйтесь с удовольствием</string>
    <string name="text_log_in">Войти</string>
    <string name="button_register">Зарегистрироваться</string>
    <string name="text_slogan">Поможем найти твою следующую поездку</string>
    <string name="text_drivenext" translatable="false">DriveNext</string>
    <string name="text_log_in_to_your_account">Войдите в аккаунт</string>
    <string name="text_enter_details">Пожалуйста, введите свои данные</string>
    <string name="text_enter_email">Введите электронную почту</string>
    <string name="text_password">Пароль</string>
    <string name="text_enter_password">Введите пароль</string>
    <string name="button_forgot_password">Забыли пароль?</string>
    <string name="button_login_google">Войти через Google</string>
    <string name="text_no_connection">Нет подключения к интернету</string>
    <string name="text_check_connection">Проверьте подключение и повторите попытку</string>
    <string name="button_retry">Повторить попытку</string>
    <string name="button_skip">Пропустить</string>
    <string name="text_rent_car">Аренда автомобилей</string>
    <string name="text_convenient_way">Открой для себя удобный и доступный способ передвижения</string>
    <string name="text_safely">Безопасно и удобно</string>
    <string name="text_rent_and_enjoy">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="text_best_offers">Лучшие предложения</string>
    <string name="text_choose_cars">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="button_go">Поехали</string>
    <string name="text_create_acc">Создать аккаунт</string>
    <string name="text_email">Электронная почта</string>
    <string name="text_create_password">Придумайте пароль</string>
    <string name="text_repeat_password">Повторите пароль</string>
    <string name="text_agreement">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_enter_surname">Введите фамилию</string>
    <string name="text_name">Имя</string>
    <string name="text_enter_name">Введите имя</string>
    <string name="text_patronymic">Отчество</string>
    <string name="text_enter_patronymic">Введите отчество</string>
    <string name="text_date_birth">Дата рождения</string>
    <string name="text_sex">Пол</string>
    <string name="text_man">Мужской</string>
    <string name="text_woman">Женский</string>
    <string name="text_about_avatar">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="text_driver_license">Номер водительского удостоверения</string>
    <string name="text_sample_driver_license">0000000000</string>
    <string name="text_date_of_issue">Дата выдачи</string>
    <string name="text_upload_photo_of_license">Загрузите фото водительского удостоверения</string>
    <string name="button_upload_photo">Загрузить фото</string>
    <string name="text_upload_photo_of_passport">Загрузите фото паспорта</string>
    <string name="Email">Электронная почта</string>
    <string name="error_agree_terms">Необходимо согласиться с условиями обслуживания и политикой конфиденциальности</string>
    <string name="error_enter_email">Введите адрес электронной почты</string>
    <string name="error_invalid_email">Введите корректный адрес электронной почты</string>
    <string name="error_enter_password">Введите пароль</string>
    <string name="error_password_length">Пароль должен быть не менее 6 символов</string>
    <string name="error_confirm_password">Подтвердите пароль.</string>
    <string name="error_passwords_mismatch">Пароли не совпадают.</string>
    <string name="error_enter_surname">Введите фамилию</string>
    <string name="error_enter_name">Введите имя</string>
    <string name="error_enter_patronymic">Введите отчество</string>
    <string name="error_enter_date_of_birth">Введите корректную дату рождения</string>
    <string name="error_select_gender">Выберите пол</string>
    <string name="error_age_less_than_16">Вам должно быть минимум 16 лет</string>
    <string name="error_enter_driver_license">Введите номер водительского удостоверения</string>
    <string name="error_driver_license_length">Номер водительского удостоверения должен состоять из 10 цифр</string>
    <string name="error_enter_date_of_getting">Введите дату получения водительского удостоверения</string>
    <string name="error_enter_invalid_date">Введите корректную дату (не позже сегодняшнего дня)</string>
    <string name="dialog_select_image_source">Выберите источник изображения</string>
    <string name="option_select_from_gallery">Выбрать из галереи</string>
    <string name="option_take_photo">Сделать фото</string>
    <string name="permissions_for_camera">Разрешения необходимы для работы с камерой и галереей</string>
    <string name="error_upload_photo">Пожалуйста, загрузите все необходимые фото</string>
    <string name="error_email_already_used">Данный email уже используется</string>
    <string name="null_gmail">Не указан</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_enter_car_brand">Введите марку автомобиля</string>
    <string name="text_find_car">Давайте найдем автомобиль</string>
    <string name="text_search_results">Результаты поиска</string>
    <string name="text_searching_cars">Ищем подходящие автомобили</string>
    <string name="text_settings">Настройки</string>
    <string name="text_name_surname">Иван Иванов</string>
    <string name="text_your_email">ivan@mtuci.ru</string>
    <string name="text_my_bookings">Мои бронирования</string>
    <string name="text_theme">Тема</string>
    <string name="text_notifications">Уведомления</string>
    <string name="text_connect_your_car">Подключить свой автомобиль</string>
    <string name="text_help">Помощь</string>
    <string name="text_invite_friend">Пригласи друга</string>
    <string name="text_model_car">S 500 Sedan</string>
    <string name="text_brand_car">Mercedes-Benz</string>
    <string name="text_price">2500₽</string>
    <string name="text_per_day">в день</string>
    <string name="text_transmission">А/Т</string>
    <string name="text_fuel">Бензин</string>
    <string name="text_book">Забронировать</string>
    <string name="text_details">Детали</string>
    <string name="text_profile">Профиль</string>
    <string name="string_registered_at">Присоединился в июле 2024</string>
    <string name="text_change_password">Поменять пароль</string>
    <string name="text_google">Google</string>
    <string name="text_your_gmail">ivanov@gmail.com</string>
    <string name="text_logout_from_profile">Выйти из профиля</string>
    <string name="error_driver_license_already_used">Этот номер водительского удостоверения уже используется</string>

</resources>