<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/item_car_background">

    <View
        android:id="@+id/border"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:background="@drawable/item_car_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/car_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_car"
        app:layout_constraintBottom_toTopOf="@+id/details_button"
        app:layout_constraintEnd_toEndOf="@+id/border"
        app:layout_constraintStart_toEndOf="@+id/daily_price"
        app:layout_constraintTop_toTopOf="@+id/border" />

    <TextView
        android:id="@+id/car_model"
        style="@style/TextAppearance.AppCompat.BoldText.Weight600Sp16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:text="@string/text_model_car"
        app:layout_constraintStart_toStartOf="@+id/border"
        app:layout_constraintTop_toTopOf="@+id/border" />

    <TextView
        android:id="@+id/car_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.BaseText.Weight500Sp12"
        android:text="@string/text_brand_car"
        android:textSize="14sp"
        android:textColor="#D0D5DD"
        app:layout_constraintTop_toBottomOf="@id/car_model"
        app:layout_constraintStart_toStartOf="@id/car_model"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/car_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.BoldText.Weight600Sp14"
        android:layout_marginTop="8dp"
        android:text="@string/text_price"
        android:textSize="16sp"
        android:textColor="#333333"
        app:layout_constraintTop_toBottomOf="@id/car_brand"
        app:layout_constraintStart_toStartOf="@id/car_model"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/daily_price"
        style="@style/TextAppearance.AppCompat.BoldText.Weight600Sp14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/text_per_day"
        android:textColor="#D0D5DD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/car_price"
        app:layout_constraintStart_toEndOf="@+id/car_price" />

    <!-- Характеристики -->
    <LinearLayout
        android:id="@+id/characteristics_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/car_price"
        app:layout_constraintStart_toStartOf="@id/car_model"
        app:layout_constraintHorizontal_bias="0.0">

        <!-- Коробка передач -->
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_at" />

        <!-- Тип топлива -->
        <TextView
            style="@style/TextAppearance.AppCompat.BaseText.Weight500Sp12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/text_transmission"
            android:textColor="#666666" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_fuel"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.BaseText.Weight500Sp12"
            android:text="@string/text_fuel"
            android:textColor="#666666"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <!-- Кнопки -->

    <Button
        android:id="@+id/book_button"
        style="@style/TextAppearance.AppCompat.BaseText.Weight400Sp16"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_book_background"
        android:padding="1dp"
        android:text="@string/text_book"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/border"
        app:layout_constraintStart_toStartOf="@+id/border" />

    <Button
        android:id="@+id/details_button"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_details_background"
        android:padding="1dp"
        android:text="@string/text_details"
        android:textColor="#666666"
        app:layout_constraintBottom_toBottomOf="@+id/book_button"
        app:layout_constraintEnd_toEndOf="@+id/border" />

</androidx.constraintlayout.widget.ConstraintLayout>